@@ -33,7 +33,11 @@ jobs:
           echo "##[add-path]C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin"
       - name: perl -V
         run: perl -V
+      - name: Install cpanm
+        run: curl -L https://cpanmin.us | perl - App::cpanminus
+      - name: Install Alien Stuff
+        run: cpanm -n Alien::Build Alien::Base URI URI::Escape Mojo::DOM58
       - name: Install Dependencies
-        run: curl -L https://cpanmin.us | perl - --installdeps .
+        run: cpanm --installdeps .
       - name: Run Tests
-        run: perl Makefile.PL && make && make test
+        run: cpanm -v .
