@@ -49,10 +49,6 @@ Alien::cmake3 = 0.04
 issues  = 1
 user    = genio
 
-[GitHubREADME::Badge]
-badges = travis
-badges = appveyor
-
 [CheckChangeLog]
 [CheckChangesHasContent]
 [Test::ChangesHasContent]
